change to selectCount interface (impl)